# ThriftAttention

./: .gitignore  CONTRIBUTING.md  README.md  build.toml  pyproject.toml  setup.py
benchmarks/: benchmark_sm80_quantized.py  compare_exp_approx.py  profiling_attention.py  run_kernel_benchmarks.py  run_kernel_benchmarks_exp_approx.py
csrc/: bindings.cpp  bindings_sm100.cpp  bindings_sm80.cpp  bindings_sm80_debug.cpp
kernel-hub/: build.toml  flake.nix
patched-nixpkgs/: flake.nix
profiling/: cvt_e2m1  cvt_e2m1_bench  exp_approx_bench  exp_bench  exp_int_bench  main.cu  main_cvt_e2m1.cu  main_divergenge_bench  main_exp.cu  main_exp_approx.cu  main_exp_int.cu  main_fp16.cu  main_mma_value_sensitivity.cu  main_nvfp4.cu  main_warp_divergence.cu  mma_fp16_bench  mma_mxf4nvf4_bench  mma_nvfp4_bench  mma_value_sensitivity_bench
scratchpad/: 2cta_mechanics.md  bisect_pair.py  pair_tiny.py  probe_2cta.py  ptx_2cta_check.cu  smoke_2cta  smoke_2cta.cu  t4_mma_probe  t4_mma_probe.cu  t5_arrive_probe  t5_arrive_probe.cu  test_pair.py
scripts/: build-in-container.sh  build.sbatch  make_thriftattention_method_gif.py
sm100-nvfp4/: README.md  bench_attention.py  fp4_attention_extension.cpp  fp4_attention_sm100.cu  modal_app.py  modal_bench.py  quantise_nvfp4.cu  sm_100_plan.txt
temp/: top.cu
tests/: test_backend_registry.py  test_benchmark_contract.py  test_cuda_bf16_correctness.py  test_cuda_fp4_exp_approx.py  test_cuda_hd256_correctness.py  test_cuda_int8_correctness.py  test_cuda_local_selection.py  test_cuda_quest_selection.py  test_cuda_sm80_quantized_correctness.py  (+6 more)
(+154 files in other folders)
