[build-system]
# PyTorch is intentionally not listed here. This CUDA extension must build
# against the PyTorch wheel installed in the target environment; otherwise
# pip build isolation may install a temporary torch wheel whose CUDA version
# does not match the local CUDA toolkit. Install torch first, then run pip
# with --no-build-isolation.
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thriftattention"
version = "0.0.1"
description = "Selective mixed-precision attention kernels for long-context FP4 inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.52",
]

[tool.setuptools.packages.find]
where = ["src"]
